# rust_fg

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/assets/: example.cmd
src/character/: commands.rs  mod.rs  sff.rs
src/character/sff/: decoder.rs  manager.rs
src/chars/: mod.rs
src/chars/kfm/: char.rs  constants.rs  kfm.air  kfm.cmd  kfm.sts  mod.rs
src/error/: air_error.rs  cmd_error.rs  mod.rs  pop_up.rs  preload_error.rs  sff_error.rs
src/input/: input.rs  manage.rs  manager.rs  mod.rs
src/player/: mod.rs  player.rs
src/player/character/: character.rs  mod.rs
src/player/character/air/: manager.rs
src/player/character/cmd/: manager.rs
src/player/character/sff/: decoder.rs  error.rs  mod.rs
src/player/input/: manager.rs  mod.rs
src/preloader/: preloader.rs
src/views/: common.rs  mod.rs  screen.rs  screen_manager.rs
src/views/fight_screen/: fight_screen.rs  gui.rs  mod.rs
src/views/loading_screen/: gui.rs  loading_screen.rs  mod.rs
src/views/main_screen/: gui.rs  main_screen.rs  mod.rs
src/views/roster_screen/: gui.rs  mod.rs  roster_screen.rs
