[package]
name = "rust_fg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "*"
piston_window = "*"
piston2d-graphics = "*"
piston2d-sprite = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
winit = "*"
find_folder = "*"
regex ="*"