[package]
name = "rust_fg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
piston = "*"
piston_window = "*"
piston2d-graphics = "*"
piston2d-sprite = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
winit = "0.28.7"
gfx_device_gl = "0.16.2"
find_folder = "*"
regex ="*"
byteorder = "*"
pcx = "*"
nom = "7.1.1"
nom_locate = "4.0.0"
flate2 = "1.0"
